--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <div class="--header-logo">
             <img class="--header-shop-icon" src="/images/shop.png" alt="images of a shop">
           </div>
-          <p class="--header-user">Welcome User</p>
+          <p id="header-user" class="--header-user">Welcome User</p>
         </header>
         <section id="main-content" class="--main-content-container">
-
+          <div id="cards"></div>
         </section>
         <footer id="footer" class="--footer">
 
