--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
           <p id="header-user" class="--header-user">Welcome User</p>
         </header>
         <section id="main-content" class="--main-content-container">
-          <div id="cards"></div>
+          <div id="reviews"></div>
+          <button>Get reviews</button>
+          <p>Other Yugi-Oh wizard cards you might be interested in:</p>
+          <div id="cards" class="--main-content-cards"></div>
         </section>
         <footer id="footer" class="--footer">
 
